apps/bifrost/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bifrost
  labels:
    app: bifrost
