apps/bifrost/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bifrost-dp
  namespace: bifrost
  labels:
    app: bifrost
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bifrost
  template:
    metadata:
      labels:
        app: bifrost
    spec:
      containers:
        - name: bifrost
          image: maximhq/bifrost:v2.2.6
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: bifrost-data
              mountPath: /app/data
      volumes:
        - name: bifrost-data
          hostPath:
            path: /mnt/ssd/app-data/bifrost/data
            type: DirectoryOrCreate
