apps/bifrost/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bifrost-cip
  namespace: bifrost
spec:
  selector:
    app: bifrost
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
  type: ClusterIP
